[package]
name = "vail"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
clap = { version = "4.6.0", features = ["derive"] }
postcard = { version = "1.1.3", features = ["alloc"] }
rand = "0.10.0"
rand_core = "0.10.0"
serde = {version="1.0.228",features=["derive"]}
sha2 = "0.10.9"
thiserror = "2.0.18"
